The main file moved to src/, knockout moved to lib/

--- a/jasmine-standalone-2.0.0/SpecRunner.html
+++ b/jasmine-standalone-2.0.0/SpecRunner.html
@@ -16,8 +16,8 @@
   <script type="text/javascript" src="src/Song.js"></script>
 
   <!-- include spec files here... -->
-  <script type="text/javascript" src="../knockout-3.0.0.debug.js"></script>
-  <script type="text/javascript" src="../knockout-validout.js"></script>
+  <script type="text/javascript" src="../lib/knockout-3.0.0.debug.js"></script>
+  <script type="text/javascript" src="../src/knockout-validout.js"></script>
   <script type="text/javascript" src="../spec/knockout-validoutSpec.js"></script>
 </head>
 
