--- a/jasmine-standalone-2.0.0/SpecRunner.html
+++ b/jasmine-standalone-2.0.0/SpecRunner.html
@@ -16,7 +16,7 @@
   <script type="text/javascript" src="src/Song.js"></script>
 
   <!-- include spec files here... -->
-  <script type="text/javascript" src="../lib/knockout-3.0.0.debug.js"></script>
+  <script type="text/javascript" src="../node_modules/knockout/build/output/knockout-latest.debug.js"></script>
   <script type="text/javascript" src="../src/knockout-validout.js"></script>
   <script type="text/javascript" src="../spec/knockout-validoutSpec.js"></script>
 </head>
