--- a/jasmine-standalone-2.0.0/SpecRunner.html
+++ b/jasmine-standalone-2.0.0/SpecRunner.html
@@ -18,6 +18,7 @@
   <!-- include spec files here... -->
   <script type="text/javascript" src="../node_modules/knockout/build/output/knockout-latest.debug.js"></script>
   <script type="text/javascript" src="../src/knockout-validout.js"></script>
+  <script type="text/javascript" src="../spec/knockout-validout-required-spec.js"></script>
   <script type="text/javascript" src="../spec/knockout-validout-type-spec.js"></script>
   <script type="text/javascript" src="../spec/knockout-validout-relations-spec.js"></script>
 </head>
