Custom validator tests.

--- a/jasmine-standalone-2.0.0/SpecRunner.html
+++ b/jasmine-standalone-2.0.0/SpecRunner.html
@@ -21,6 +21,7 @@
   <script type="text/javascript" src="../spec/knockout-validout-required-spec.js"></script>
   <script type="text/javascript" src="../spec/knockout-validout-type-spec.js"></script>
   <script type="text/javascript" src="../spec/knockout-validout-relations-spec.js"></script>
+  <script type="text/javascript" src="../spec/knockout-validout-custom-spec.js"></script>
 </head>
 
 <body>
